--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 
   <h1 id="title">Drum 🥁 Kit</h1>
+  
+  <p>Try clicking on the buttons or pressing the corresponding keys on your keyboard!</p>
+  
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
