--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   
-  <p>Try clicking on the buttons or pressing the corresponding keys on your keyboard!</p>
+  <p>Try clicking on the buttons or pressing the corresponding keys displayed on the buttons!</p>
   
   <div class="set">
     <button class="w drum">w</button>
